--- a/index.html
+++ b/index.html
@@ -27,18 +27,52 @@
       </nav>
    </div>
    <div class="container">
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div id="carouselExampleControls" class="carousel slide orange-back" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="headphone.png" class="d-block w-100" alt="...">
+              <div class="row align-items-center">
+                  <div class="col-md-7">
+                    <h1>mega Lcd tv for sports</h1>
+                    <p>this is the best tv in the world ...people can waste their time by watching tv...</p>
+                    <h1 class="price">$1200</h1>
+                    <button class="buy">Buy Now</button>
+
+                  </div>
+                  <div class="col-md-5">
+                    <img src="tv.png" class="d-block w-100" alt="...">
+                  </div>
+              </div>
+            
           </div>
           <div class="carousel-item">
-            <img src="tv.png" class="d-block w-100" alt="...">
+          <div class="row align-items-center">
+            <div class="col-md-7">
+                <h1>Mega xbox</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi quod harum fugit? Facilis officiis nihil harum maxime quod minus fugit.</p>
+                <h1>$2400</h1>
+                <button class="buy">Buy Here</button>
+
+            </div>
+            <div class="col-md-5">
+             <img src="xbox.png" class="d-block w-100" alt="...">
+            </div>
+           </div>
           </div>
           <div class="carousel-item">
-            <img src="xbox.png" class="d-block w-100" alt="...">
+           <div class="row align-items-center">
+            <div class="col-md-7">
+                <h1>Amazing sound</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium eum officia dicta? Earum quam voluptatibus quos, eum vel reiciendis quo!</p>
+                <h1>$3200</h1>
+                <button class="buy">Buy Here</button>
+
+            </div>
+            <div class="col-md-5">
+                <img src="headphone.png" class="d-block w-100" alt="...">
+            </div>
           </div>
         </div>
+           </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
