--- a/index.html
+++ b/index.html
@@ -107,7 +107,36 @@
     </div>
     
 </div>
-
+<div class="card-deck">
+    <div class="card">
+      <img src="shoes/shoe-1.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Good shoe</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5>$140</h5>
+        <button class="shoe">Buy ME</button>
+      </div>
+    </div>
+    <div class="card">
+      <img src="shoes/shoe-2.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Medium shoe</h5>
+        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        <h5>$320</h5>
+        <button class="shoe">Buy Me</button>
+      </div>
+    </div>
+    <div class="card">
+      <img src="shoes/shoe-3.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Costly shoe</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+       <h5>$350</h5>
+       <button class="shoe">Buy Me</button>
+      </div>
+    </div>
+  </div>
+    
 
 
 
