--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </div>
    </div>
      
-<div class="container categories">
+<div class="container categories" id="shoes">
     <div class="row">
         <div class="col-md-4">
            <div class="d-flex justify-content-between align-items-center cat1">
@@ -137,7 +137,44 @@
     </div>
   </div>
     
-
+<div class="contaier" id="backpack">
+    <h3>Backpack</h3>
+    <div class="card-deck">
+        <div class="card">
+          <img src="bag-1.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Red back</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h5>$100</h5>
+          </div>
+          <div class="card-footer">
+            <button class="shoe">Buy Me</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="bag-2.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Blue back</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <h5>$120</h5>
+          </div>
+          <div class="card-footer">
+            <button class="shoe">Buy Me</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="bag-3.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Black Bck</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <h5>$150</h5>
+          </div>
+          <div class="card-footer">
+            <button class="shoe">Buy Me</button>
+          </div>
+        </div>
+      </div>
+</div>
 
 
 
