--- a/index.html
+++ b/index.html
@@ -175,6 +175,14 @@
         </div>
       </div>
 </div>
+<div class="container  d-flex align-items-center justify-content-center" id="subscribe">
+   <div>
+    <h3>Let's stay in touch</h3>
+    <h6>get update on sales,spcials anr more</h6>
+    <input class="button-controls" type="text">
+    <button class="buy">SUBMIT</button>
+   </div>
+</div>
 
 
 
