--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">Shoes</a>
-            <a class="nav-item nav-link" href="#">backpack</a>
+            <a class="nav-item nav-link" href="shoes">Shoes</a>
+            <a class="nav-item nav-link" href="backpack">backpack</a>
             <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">contact us</a>
           </div>
         </div>
@@ -179,7 +179,7 @@
    <div>
     <h3>Let's stay in touch</h3>
     <h6>get update on sales,spcials anr more</h6>
-    <input class="button-controls" type="text">
+    <input class="form-control" type="text">
     <button class="buy">SUBMIT</button>
    </div>
 </div>
