--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <h5>$100</h5>
           </div>
           <div class="card-footer">
-            <button class="shoe">Buy Me</button>
+            <button class="shoe">Buy Me >></button>
           </div>
         </div>
         <div class="card">
@@ -159,7 +159,7 @@
             <h5>$120</h5>
           </div>
           <div class="card-footer">
-            <button class="shoe">Buy Me</button>
+            <button class="shoe">Buy Me >></button>
           </div>
         </div>
         <div class="card">
@@ -170,7 +170,7 @@
             <h5>$150</h5>
           </div>
           <div class="card-footer">
-            <button class="shoe">Buy Me</button>
+            <button class="shoe">Buy Me >></button>
           </div>
         </div>
       </div>
